--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,8 +2,19 @@
 {{> header}}
 <main>
   <section>
+    <!-- {{#if user}}
+      <p>{{user.email}}</p>
+      <p>{{user.sex}}</p>
+      <p>{{user.cuisine}}</p>
+      <p>{{user.preference}}</p>
+      <p>{{user.location}}</p>
+    {{/if}} -->
     <h1>{{title}}</h1>
   </section>
+  {{> loginForm}}
 </main>
 {{> footer}}
 </div>
+
+<script src="js/home.js"></script>
+<script src="js/ajax/login.js"></script>
