--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,8 +2,10 @@
     <nav>
         <ul>
             <li> <a href="/">home</a> </li>
-            <li> <a href="/">home</a> </li>
-            <li> <a href="/">home</a> </li>
+            {{#if user}}
+            {{else}}
+            <li> <a href="/register">register</a> </li>
+            {{/if}}
         </ul>
     </nav>
     {{#if user}}
