--- a/src/pages/register.scss
+++ b/src/pages/register.scss
@@ -12,7 +12,7 @@
     display: flex;
     margin: auto;
     flex-wrap: wrap;
-    height: 600px;
+    height: 60vh;
     overflow: scroll;
     overflow-x: hidden;
     & label {
