small styling changes

--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,4 +1,10 @@
-$background-color: #fbf8f6;
+$background-color: #c5afa4;
+$dark-background-color: #444444;
+$black: #3d3d3d;
+$light-background-color: #f4e6d8;
+$male-blue: #526f89;
+$female-pink: #cf4d6f;
+
 
 $border-radius-small: 5px;
 $border-radius-big: 10px;
