--- a/views/partials/loginForm.hbs
+++ b/views/partials/loginForm.hbs
@@ -1,7 +1,7 @@
 <div class="login-form__container {{#if registered}} {{else}} hidden {{/if}}">
     <form action="/login" onsubmit="login(this, event)">
       <div class="form-head">
-        <h2>Login</h2>
+        <h2>Lets eat!</h2>
       </div>
       <label for="email">Email</label>
       <input type="text" name="email">
