--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -6,6 +6,9 @@ header {
   & button.login-button, a{
     flex-grow: 1;
   }
+  & button.login-button {
+    background-color: white;
+  }
   & a {
     text-align: center;
     align-self: center;
@@ -50,7 +53,7 @@ section {
 
       & .form-head {
         display: flex;
-        background-color: black;
+        background-color: $black;
         border-radius: $border-radius-big $border-radius-big 0 0;
         height: 100px;
         text-align: center;
@@ -94,10 +97,12 @@ section {
       }
 
       & input[type=submit] {
-        background-color: black;
-        border: 1px solid white;
+        background-color: $black;
+        border: none;
+        border-radius: $border-radius-small;
         color: white;
         margin-left: auto;
+        margin-top: 10px;
         height: 50px;
         width: 50%;
         max-width: 200px;
