--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,7 @@ div#page {
     flex-wrap: wrap;
     position: relative;
     & h1 {
+      color: white;
       position: absolute;
       left: 50%;
       top: 50%;
