added updating users through AJAX

--- a/src/pages/account.scss
+++ b/src/pages/account.scss
@@ -1,4 +1,4 @@
-#registration-form__container {
+#account-form__container {
   width: 80%;
   margin: auto;
   background-color: rgba(44, 92, 121, 0.1);
