--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -13,13 +13,13 @@
         <input type="radio" name="sex" value="woman" required>
         <label for="cuisine">Favorite cuisine</label>
         <select name="cuisine" required>
-        <option value="Chinese">Chinese</option>
-        <option value="Thai">Thai</option>
-        <option value="Eastern">Eastern</option>
-        <option value="French">French</option>
-        <option value="Spanish">Spanish</option>
-        <option value="Japanese">Japanese</option>
-        <option value="Italian">Italian</option>
+        <option value="chinese">Chinese</option>
+        <option value="thai">Thai</option>
+        <option value="eastern">Eastern</option>
+        <option value="french">French</option>
+        <option value="spanish">Spanish</option>
+        <option value="japanese">Japanese</option>
+        <option value="italian">Italian</option>
       </select>
         <label for="preference">Are you veg(an)</label>
         <select name="preference" required>
