--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,14 +2,11 @@
 {{> header}}
 <main>
   <section>
-    <!-- {{#if user}}
-      <p>{{user.email}}</p>
-      <p>{{user.sex}}</p>
-      <p>{{user.cuisine}}</p>
-      <p>{{user.preference}}</p>
-      <p>{{user.location}}</p>
-    {{/if}} -->
-    <h1>{{title}}</h1>
+    {{#if data}}
+      <h1>Welcome: {{data.name}}</h1>
+    {{else}}
+      <h1>{{title}}</h1>
+    {{/if}}
   </section>
   {{> loginForm}}
 </main>
